--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.10.5",
     "com.unity.collab-proxy": "2.11.3",
     "com.unity.ide.rider": "3.0.36",
